# web-editor

./: .gitignore  .travis.yml  ABOUT.rst  API.md  CHANGELOG  CHANGELOG.docx  DEVELOP.md  LICENSE  README.md  README.rst  README_ZH.md  log.txt  raw_run.sh  requirements.txt  server.sh  setup.cfg  setup.py  version
.github/workflows/: publish-to-pypi.yml
samples/: bower.json  index.html
tests/: test_proto.py  test_web_utils.py
web/: README.md  requirements.txt  web.py
web/static/: style.css
web/static/js/: index.js
web/templates/: index.html
webpage/: README.md  package-lock.json  package.json  vue.config.js
weditor/: __init__.py  __main__.py  jsonrpc_client.py  jsonrpc_server.py  main.py  page.xml  rpcserver.py  uidumplib.py
weditor/static/: style.css
weditor/static/ace/: ace.js
weditor/static/cdn_libraries/cdn.jsdelivr.net/npm/ace-builds@1.4.12/src-noconflict/: ace.min.js  ext-language_tools.min.js  ext-searchbox.min.js  mode-python.min.js
weditor/static/cdn_libraries/unpkg.com/: vue-async-computed@3.7.0
weditor/static/js/: common.js  index.js
weditor/templates/: index.html  index2.html  list.html  widget_preview.html
weditor/web/: device.py  ipyshell-console.py  ipyshell.py  jsonrpc_client.py  jsonrpc_server.py  proto.py  uidumplib.py  utils.py  version.py
weditor/web/handlers/: mini.py  page.py  proxy.py  shell.py
