[metadata]
name = weditor
author = codeskyblue
author-email = codeskyblue@gmail.com
summary = tool for writing atx script
license = MIT
home-page = https://github.com/openatx/weditor
description-file = README.rst
requires-python = >=2.7
classifier =
	Environment :: Console
	Intended Audience :: Developers
	Operating System :: OS Independent
	Programming Language :: Python :: 2.7

[files]
packages =
	weditor
