[metadata]
name = weditor
author = codeskyblue
author-email = codeskyblue@gmail.com
summary = tool for writing atx script
license = MIT
home-page = https://github.com/openatx/weditor
description-file = README.md
classifier =
	Environment :: Console
	Intended Audience :: Developers
	Operating System :: OS Independent
	Programming Language :: Python

[files]
packages =
	weditor

[entry_points]
console_scripts =
    weditor = weditor.__main__:main
